[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-governance"
version = "0.1.0"
description = "A governance layer for AI agent memory — access control, audit trails, retention policies, and PII redaction via MCP."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ming Zhou", email = "mzyag@users.noreply.github.com" }]
keywords = ["mcp", "ai-agent", "memory", "governance", "compliance", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/mzyag/memory-governance"
Repository = "https://github.com/mzyag/memory-governance"
Issues = "https://github.com/mzyag/memory-governance/issues"

[project.scripts]
memory-governance = "memory_governance.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_governance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
